<resources>
    <string name="app_name">UberPaczka</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="log">Sign in</string>
    <string name="rej">You dont have an account yet? Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date">Date of birth</string>
    <string name="phone">Phone number</string>
    <string name="card">Card number</string>
    <string name="ccv">CCV code</string>
    <string name="street">Street</string>
    <string name="flat">Flat</string>
    <string name="city">City</string>
    <string name="registernew">Sign up</string>
    <string name="logo">Logo</string>
    <string name="title_activity_maps">Map</string>
    <string name="adress">Adress</string>
    <string name="driver">Driver panel</string>
    <string name="old_password">Old Password</string>
    <string name="new_email">New email</string>

    <!--every below strings were used in fragment summary for displaying string -->
    <string name="summary">Summary</string>
    <string name="destination">Destination</string>
    <string name="from">From where</string>
    <string name="price">Price</string>
    <string name="package_size_small">Small</string>
    <string name="package_size_medium">Medium</string>
    <string name="package_size_grande">Big</string>
    <string name="choose_size">Choose the size of the package</string>
    <string name="accept">Confirm</string>


    <!--error messages-->
    <string name="error_name">Incorrect data</string>
    <string name="error_surname">Incorrect data</string>
    <string name="error_date">Invalid date format</string>
    <string name="error_phone_number">Incorrect phone number</string>
    <string name="error_email">Incorrect email</string>
    <string name="error_card_number">Incorrect card number</string>
    <string name="error_ccv">Incorrect card security code</string>
    <string name="error_street">Invalid street name</string>
    <string name="error_flat">Invalid house number</string>
    <string name="error_city">Incorrect city name</string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_blank">The field can not be empty</string>
    <string name="error_password">Incorrect password format</string>
    <string name="error_repeat_password">The passwords are not the same. try again</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_terms_checkbox">You must accept the terms of the contract</string>


    <!-- registration strings-->

    <!-- first fragment -->
    <string name="create_account">Create an account</string>
    <string name="basic_inforamtion_layout">Provide basic information</string>
    <string name="adrress_layout">Enter the address of residence</string>
    <string name="card_number_layout">Enter the card number</string>
    <string name="username_password_layout">Enter email and password</string>
    <string name="privacy_terms">Terms of use</string>
    <string name="next_layout">Next</string>
    <string name="name_change_layout">Enter new name</string>
    <string name="surname_change_layout">Enter new surname</string>
    <string name="phone_change_layout">Enter new phone</string>
    <string name="email_change_layout">Enter new email</string>
    <string name="on_registration_fail">Registration failed</string>
    <string name="check_internet_connection">Check the internet connection </string>
    <string name="understand_no_internet_connection">I understood</string>
    <string name="password_change_layout">Enter new password</string>
    <string name="update_account">Update account</string>


    <string name="privacy_acceptance">I accept the terms of use of the service offered by UberPaczka</string>


    <!--item for navigation drawer-->
    <string name="log_out">Log out</string>
    <string name="my_account">My account</string>
    <string name="driver_panel">Make money driving</string>
    <string name="my_shipment">My shipment</string>


    <string name="hint_place_autocompletefragment_from">Pickup location</string>
    <string name="hint_place_autocompletefragment_destination">Destination adress</string>
    <string name="error_loading_user_data">Can\'t load user data</string>

    <string name="mail_navigation_header">E-mail</string>

    <string name="order_checkout">Order</string>

    <string name="package_status">Package status</string>

    <string name="recipient_name">Recipient name</string>

    <string name="recipient_phone">Recipient phone number</string>

    <string name="to">to</string>

    <!--driver panel -->
    <string name="register_driver_header">Driver registration</string>
    <string name="become_driver">Become a Driver</string>
    <string name="apply">Apply</string>
    <string name="signup_to_drive">Sign up to drive</string>
    <string name="common_next">Next</string>
    <string name="load_driver_license_photo">Upload driver license photo</string>
    <string name="partnership_agreement">Partnership agreement</string>
    <string name="driver_acceptance">I accept the partnership agreement with UberPaczka</string>

    <string name="driver_orders">Driver panel</string>
    <string name="add_photo">Add photo</string>
    <string name="select_photo_from_gallery">Select photo from gallery</string>
    <string name="capture_photo_from_camera">Capture photo from camera</string>
    <string name="common_updated_successfully">Updated successfully</string>
    <string name="common_error_updating">Error updating</string>
    <string name="waiting_for_driver">Waiting for driver</string>
    <string name="driver_is_coming">Driver is coming</string>
    <string name="package_delivered">Package delivered</string>
    <string name="package_on_the_way">Package on the way</string>
    <string name="unknown_package_status">Unknown status</string>
    <string name="change_package_status">Change package status</string>
    <string name="available_orders">Available orders</string>
    <string name="accepted_orders">Accepted orders</string>

</resources>
