<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/padding_registration_fragment">


    <TextView
        android:id="@+id/createAcoount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/basicInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/basic_inforamtion_layout"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColor"
        app:layout_constraintTop_toBottomOf="@id/createAcoount" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_textinput_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColorHint="@color/hintColor"
        app:layout_constraintTop_toBottomOf="@id/basicInformation"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:errorTextAppearance="@style/error_appearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name_edittextinput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/surname_textinput_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColorHint="@color/hintColor"
        app:layout_constraintTop_toBottomOf="@id/name_textinput_layout"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:errorTextAppearance="@style/error_appearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/surname_edittextinput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/birthday_textinput_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColorHint="@color/hintColor"
        app:layout_constraintTop_toBottomOf="@id/surname_textinput_layout"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:errorTextAppearance="@style/error_appearance">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/birthday_edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:textColor="@color/textColor"
        android:textColorHighlight="@color/colorAccent"
        android:focusable="false"
        android:textColorHint="@color/hintColor"
        android:maxLines="1"
        android:singleLine="true"
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phonenumber_textinput_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColorHint="@color/hintColor"
        app:layout_constraintTop_toBottomOf="@id/birthday_textinput_layout"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:errorTextAppearance="@style/error_appearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phonenumber_edittext_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:textColor="@color/textColor"
            android:textColorHighlight="@color/colorAccent"
            android:inputType="phone"
            android:textColorHint="@color/hintColor"
            android:maxLines="1"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_next_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/next_layout"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday_textinput_layout" />


</android.support.constraint.ConstraintLayout>