<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/padding_fragments"
    app:layout_constraintHorizontal_chainStyle="packed">


    <TextView
        android:id="@+id/createAcoount1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/residentialAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/adrress_layout"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColor"
        app:layout_constraintTop_toBottomOf="@id/createAcoount1" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/flat_textinput_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColorHint="@color/hintColor"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/residentialAddress">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/flat_edittextinput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/flat"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/street_textinput_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:textColorHint="@color/hintColor"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/residentialAddress">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/street_edittextinput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/city_textinput_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColorHint="@color/hintColor"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:layout_constraintTop_toBottomOf="@id/street_textinput_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cityt_edittextinput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_next_detail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/next_layout"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/street_textinput_layout" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="56dp" />

</android.support.constraint.ConstraintLayout>